chen 7-2-2025 fix some issues within the code to enable multi-platform