@@ -1,6 +1,7 @@
 package LC_Questions.CollectionAll.DP.Others;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -8,10 +9,10 @@ public class Triangle_120_Med {
     public static void main(String[] args) {
         Triangle_120_Med t = new Triangle_120_Med();
         List<List<Integer>> triangle = new ArrayList<>();
-        triangle.add(new ArrayList<>(List.of(2)));
-        triangle.add(new ArrayList<>(List.of(3, 4)));
-        triangle.add(new ArrayList<>(List.of(6, 5, 7)));
-        triangle.add(new ArrayList<>(List.of(4, 1, 8, 3)));
+        triangle.add(new ArrayList<>(Arrays.asList(2)));
+        triangle.add(new ArrayList<>(Arrays.asList(3, 4)));
+        triangle.add(new ArrayList<>(Arrays.asList(6, 5, 7)));
+        triangle.add(new ArrayList<>(Arrays.asList(4, 1, 8, 3)));
         System.out.println(t.minimumTotal(triangle));
     }
     public int minimumTotal(List<List<Integer>> t) {
@@ -24,6 +25,6 @@ public class Triangle_120_Med {
                 t.get(row).set(col, path);
             }
         }
-        return Collections.min(t.getLast());
+        return Collections.min(t.get(t.size() - 1));
     }
 }
